# newfoundsync

./: .gitignore  CNAME  CODE_REVIEW_FIXES.md  Cargo.toml  README.md  index.html  nfs-watchdog.ps1  vcpkg.json
.github/workflows/: ci.yml
branding/: README.md  gen-icons.ps1
crates/android/: Cargo.toml  build-apk.ps1  build-libopus-android.ps1
crates/android/src/: lib.rs  multicast.rs
crates/core/: Cargo.toml
crates/core/src/: codec.rs  config.rs  discovery.rs  e2e.rs  lib.rs  playback.rs  proto.rs  runtime.rs  video.rs
crates/core/src/client/: jitterbuffer.rs  mod.rs  playout.rs  scheduler.rs  subscribe.rs
crates/core/src/clock/: estimator.rs  follower.rs  mod.rs  payload.rs  server.rs
crates/core/src/server/: mod.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/packaging/: README-debian.md  newfoundsync.service
crates/desktop/src/: gui.rs  main.rs  media.rs  settings.rs  tls.rs  webserver.rs
crates/desktop/src/capture/: mod.rs  process.rs  pulse.rs  sessions.rs  system.rs
crates/desktop/src/video/: capture.rs  codec.rs  gpu.rs  mf_encoder.rs  mod.rs  relay.rs  vp9.rs
crates/desktop/web/: app.js  index.html  manifest.webmanifest  sw.js
docs/: index.html
e2e/: README.md  package-lock.json  package.json  playwright.config.js
e2e/tests/: legacy-sw-recovery.spec.js  persisted-state.spec.js  reload-cache.spec.js  reload-stress.spec.js  smoke.spec.js
flatpak/: README.md  ca.newfoundsync.Newfoundsync.desktop  ca.newfoundsync.Newfoundsync.metainfo.xml  ca.newfoundsync.Newfoundsync.yml
