[package]
name = "newfoundsync"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Lightweight LAN audio sharing with tight multiroom sync (desktop)"

[[bin]]
name = "newfoundsync"
path = "src/main.rs"

[dependencies]
newfoundsync-core = { path = "../core" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
# System-audio capture (loopback) still uses cpal; playback is now the browser's.
cpal = "0.18.1"
openh264 = "0.9.3"
# Data-parallel pixel conversions (BGRA→NV12 / BGRA→RGB / scaling) across cores.
rayon = "1"
# Web server: serves the embedded web client + a WebSocket that clock-syncs and
# streams audio/video to browsers. Sync capture/encode threads bridge in via a
# broadcast channel.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
# Native server GUI: pick the audio source / video options, show the client URL.
eframe = "0.34"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rcgen = "0.14.8"
rustls = { version = "0.23.40", features = ["ring"] }

# Windows-only screen capture (WGC). The video capture module is cfg'd to Windows;
# Linux capture (PipeWire) is a follow-up.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2.0.0"
# Media Foundation (GPU H.264 encode) + WASAPI process-loopback capture.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Audio",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
# `#[implement]` (COM callback for ActivateAudioInterfaceAsync) emits windows_core paths.
windows-core = "0.62"

# Embed branding/icon.ico into newfoundsync.exe (Explorer / Start menu icon).
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
