[package]
name = "newfoundsync"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lightweight LAN audio sharing with tight multiroom sync (desktop)"

[[bin]]
name = "newfoundsync"
path = "src/main.rs"

[dependencies]
newfoundsync-core = { path = "../core" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
# System-audio capture (loopback) still uses cpal; playback is now the browser's.
cpal = "0.18.1"
# Software AV1 encode (royalty-free codec). The default build fetches a prebuilt
# SvtAv1Enc static lib for the target — on Windows this needs only curl/tar/certutil
# (no CMake/NASM). Wraps SVT-AV1 v4.1.0. NOTE: this crate is edition 2024, so it
# requires rustc >= 1.88 (run `rustup update` if the build complains).
shiguredo_svt_av1 = "2026.1.0"
# Software VP9 encode (royalty-free fallback to AV1) via libvpx. env-libvpx-sys ships
# PRE-GENERATED bindings up to libvpx 1.13.0, so the repo pins libvpx to 1.13.0 (see vcpkg.json)
# to match — newer libvpx has a different encoder ABI. Build supplies libvpx via vcpkg manifest
# mode (`vcpkg install --triplet x64-windows-static` in the repo) + env: VPX_LIB_DIR /
# VPX_INCLUDE_DIR (→ vcpkg_installed/x64-windows-static) / VPX_VERSION=1.13.0 / VPX_STATIC=1.
# Static libvpx needs a matching CRT (RUSTFLAGS=-Ctarget-feature=+crt-static). See README build notes.
env-libvpx-sys = "5.1.3"
# Data-parallel pixel conversions (BGRA→NV12 / BGRA→RGB / scaling) across cores.
rayon = "1"
# Web server: serves the embedded web client + a WebSocket that clock-syncs and
# streams audio/video to browsers. Sync capture/encode threads bridge in via a
# broadcast channel.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
# Native server GUI: pick the audio source / video options, show the client URL.
eframe = "0.34"
# Render a scannable QR of the connect URL (default features off → no image/svg deps).
qrcode = { version = "0.14", default-features = false }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rcgen = "0.14.8"
rustls = { version = "0.23.40", features = ["ring"] }

# Windows-only screen capture (WGC). The video capture module is cfg'd to Windows;
# Linux capture (PipeWire) is a follow-up.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2.0.0"
# Media Foundation (GPU H.264 encode) + WASAPI process-loopback capture.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_System_Threading",
    "Win32_Media_MediaFoundation",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Audio",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
    # GPU zero-copy video path: D3D11 VideoProcessor (BGRA→NV12) + DXGI surfaces fed to
    # the Media Foundation encoder. The VideoProcessor/CreateTexture2D/ColorSpace1 symbols
    # are gated behind Dxgi_Common — without these features they don't exist.
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }
# `#[implement]` (COM callback for ActivateAudioInterfaceAsync) emits windows_core paths.
windows-core = "0.62"

# Embed branding/icon.ico into newfoundsync.exe (Explorer / Start menu icon).
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"
