[package]
name = "newfoundsync"
version = "0.0.1"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Lightweight LAN audio sharing with tight multiroom sync (desktop)"

[features]
# `gui` (default): the native egui server GUI (pulls eframe + qrcode; on Linux that needs the
# X11/Wayland/GL dev stack). Build a pure headless server with `--no-default-features` — no GUI
# and none of those display dependencies (ideal for a Linux server).
default = ["gui"]
gui = ["dep:eframe", "dep:qrcode"]

[[bin]]
name = "newfoundsync"
path = "src/main.rs"

[dependencies]
newfoundsync-core = { path = "../core" }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
# System-audio capture (loopback) still uses cpal; playback is now the browser's.
cpal = "0.18.1"
# The video encoders (SVT-AV1 + libvpx/VP9) are Windows-only deps — see the
# [target.'cfg(target_os = "windows")'.dependencies] section below. On Linux the server builds
# audio + web-cast relay only (no local screen capture), so those C libraries aren't pulled in.
# Data-parallel pixel conversions (BGRA→I420 for SVT-AV1/VP9, BGRA→NV12 for the MF GPU encoder) and frame scaling across cores.
rayon = "1"
# Web server: serves the embedded web client + a WebSocket that clock-syncs and
# streams audio/video to browsers. Sync capture/encode threads bridge in via a
# broadcast channel.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net", "time"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
# Native server GUI (optional; `gui` feature, on by default). --no-default-features drops eframe +
# qrcode entirely, so a headless build needs no X11/Wayland/GL.
eframe = { version = "0.34", optional = true }
# Render a scannable QR of the connect URL (default features off → no image/svg deps).
qrcode = { version = "0.14", default-features = false, optional = true }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rcgen = "0.14.8"
rustls = { version = "0.23.40", features = ["ring"] }

# Windows-only screen capture (WGC). The video capture module is cfg'd to Windows;
# Linux capture (PipeWire) is a follow-up.
[target.'cfg(target_os = "windows")'.dependencies]
windows-capture = "2.0.0"
# Media Foundation (GPU AV1 encode) + WASAPI process-loopback capture.
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    # VARIANT (the mf_encoder low-latency ICodecAPI hint) is gated on BOTH Com + Ole in windows-rs;
    # without Win32_System_Ole the build compiled only via eframe's feature unification — so a
    # headless (no-eframe) build broke. Listed explicitly to be self-sufficient.
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Media_MediaFoundation",
    "Win32_Media_Audio",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Dwm",
] }
# `#[implement]` (COM callback for ActivateAudioInterfaceAsync) emits windows_core paths.
windows-core = "0.62"
# Video encoders — Windows-only (the only platform with local screen capture today).
# Software AV1: prebuilt SvtAv1Enc static lib (Windows needs only curl/tar/certutil; wraps
# SVT-AV1 v4.1.0; crate is edition 2024 → rustc >= 1.88).
shiguredo_svt_av1 = "2026.1.0"
# Software VP9 via libvpx. env-libvpx-sys ships PRE-GENERATED 1.13.0 bindings, so the repo pins
# libvpx to 1.13.1 (vcpkg.json — closest vcpkg carries, same 1.13.x ABI). Supply libvpx via vcpkg:
# `vcpkg install --triplet x64-windows-static` + env VPX_LIB_DIR / VPX_INCLUDE_DIR
# (→ vcpkg_installed/x64-windows-static) / VPX_VERSION=1.13.0 / VPX_STATIC=1. See README.
env-libvpx-sys = "5.1.3"

# Linux-only: native PulseAudio/PipeWire capture of the system output's monitor (cpal/ALSA can't
# see PipeWire `.monitor` sources). libpulse ships in the Freedesktop runtime; the .deb build needs
# libpulse-dev (Fedora: pulseaudio-libs-devel).
[target.'cfg(target_os = "linux")'.dependencies]
# libpulse-binding's lib is `libpulse_binding` and libpulse-simple-binding's is
# `libpulse_simple_binding`; the ecosystem convention aliases them to `pulse` / `psimple`. Rename
# via `package =` so the `use pulse::…` / `use psimple::…` in capture/pulse.rs resolve.
pulse = { package = "libpulse-binding", version = "2" }
psimple = { package = "libpulse-simple-binding", version = "2" }

# Embed branding/icon.ico into newfoundsync.exe (Explorer / Start menu icon).
[target.'cfg(target_os = "windows")'.build-dependencies]
winresource = "0.1"

# --- Debian packaging (headless Linux server) --------------------------------------------------
# Build the .deb ON a Linux box: `cargo install cargo-deb`, then from the repo root
# `cargo deb -p newfoundsync --no-default-features` (headless — no GUI, no SVT-AV1/libvpx).
# See packaging/README-debian.md for the apt build-deps.
[package.metadata.deb]
maintainer = "Alex Hurshman <alex.hurshman@qracorp.com>"
copyright = "2026 Alex Hurshman and the Newfoundsync contributors"
section = "sound"
priority = "optional"
extended-description = """
Newfoundsync headless server: serves the embedded web client over HTTPS + WebSocket so LAN \
browsers clock-sync and play audio in lock-step. Audio source is a PulseAudio/PipeWire monitor \
(--capture system) or a web-cast uplink (--capture web). Screen video and per-app capture are \
Windows-only; this Linux build is audio + web-cast relay."""
depends = "$auto"
assets = [
    ["target/release/newfoundsync", "usr/bin/", "755"],
    ["packaging/newfoundsync.service", "lib/systemd/system/", "644"],
]
